tests/extensions/structs/semanticErr/wrongInitialization.wacc
begin
    struct sa is
        int s
        int b
    end
    sa s = sa{1, 'a'}
end